SERVER-47179: Fix crash when requesting serverStatus oplog before the oplog collection is created

(cherry picked from commit d34b92cb31a147cf29fe676081978f3ff7acd79f)